# lamino

./: .clangd  .gitignore  .readthedocs.yaml  CMakeLists.txt  CMakePresets.json  README.md  add_lic_header.sh  array.h  clean.sh  config_template.toml  convolve.cpp  convolve.h  deapod.cpp  dtypes.h  fft.cpp  fft.h  gridrec.cpp  kernel.h  main.cpp  projection.cpp  recon.toml  results.cpp  setup.sh
cmake/: FindFFTW.cmake  Findfinufft.cmake  Findnlohmann_json.cmake
config/: bwd01.json  chess01.json  chess02.json  forward.toml  fwd01.json  fwd02.json  recon.toml
docs/: Doxyfile  Makefile  README.md  conf.py  configuration.rst  contributing.rst  examples.rst  getting_started.rst  index.rst  installation.rst  license.rst  requirements.txt  usage.rst
docs/api/: core.rst  index.rst  io.rst  reconstruction.rst  utilities.rst
examples/: LOGGER_README.md  logger_example.cpp
include/: array.h  array_ops.h  bregman.h  config.h  demag.h  dtypes.h  fft.h  fftplans.h  fftutils.h  filter.h  finufft_plan.h  finufft_plan_cache.h  logger.h  mask.h  nesterov.h  nufft.h  optimize.h  padding.h  polar_grid.h  precond.h  projection.h  recon_params.h  slice.h  tiff.h  timer.h  tomocam.h  utils.h  write_vti.h
include/gpu/: device_ptr.cuh  device_ptr.h  gpu_memory.h  utils.cuh
scripts/: angles.sh  backward.sh  forward.sh  path.py  plot_chess.py  plot_error.py  run_nufft.py
src/: adam.h  array.h  array_ops.h  backproj.cpp  bregman.cpp  cgls.cpp  conjgrad.cpp  convolve.cpp  convolve.h  deapod.cpp  dtypes.h  fft.cpp  fft.h  fftconv.cpp  fftutils.h  finitediff.cpp  forward.cpp  gpu_memory.h  gradient.cpp  kernel.h  lipschitz.cpp  mbir.cpp  mbir1.cpp  mbir3.cpp  mbir_cg.cpp  mbir_cgls.cpp  mbir_sb.cpp  nagopt.cpp  nesterov.h  nufft.h  optimize.h  padding.h  polar_grid.h  proj2.cpp  projection.cpp  qggmrf.cpp  recon.cpp  results.cpp  tiff.h  timer.h  (+2 more)
src/gpu/: diverg.cu  gGGMRF.cu  grad.cu  polar_grid.cu
test/: CMakeLists.txt  backward.cpp  forward.cpp  gridrec.cpp  main.cpp  reader.h  test_conv.cpp  test_grad.cpp  toeplitz.cpp  transform_error.cpp  writer.h
tests/: CMakeLists.txt  backproj.cpp  chessboard.cpp  forward.cpp  main.cpp  shepplogan.cpp  shepplogan.h  simple2d1.cpp  test_cg.cpp  test_conv.cpp  test_demag.cpp  test_fft.cpp  test_fft_r2c.cpp  test_fftshift.cpp  test_grad.cpp  test_lipschitz.cpp  test_loss.cpp  test_masking.cpp  test_resetPads.cpp  test_transpose.cpp  toeplitz.cpp
